correction contraste

--- a/style.css
+++ b/style.css
@@ -760,7 +760,7 @@ h4 {
 }
 
 .white {
-    color: black!important;
+    color: white!important;
 }
 
 .portfolio-thumb {
@@ -777,7 +777,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0, 0, 0, 0.3);
     padding: 40px 40px 40px 40px;
 }
 
@@ -799,7 +799,7 @@ h4 {
 }
 
 .tc-white {
-    color: black!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
@@ -865,6 +865,10 @@ h4 {
 .decal p{
     margin-top: 315px;
     margin-left: 50px;
+}
+
+.black{
+    color: black!important;
 }
 
 @media (max-width: 1024px) {
